Add IME Options

--- a/app/src/main/res/layout/activity_config_server.xml
+++ b/app/src/main/res/layout/activity_config_server.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:maxLines="1"
         android:hint="@string/input_text_ip"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
@@ -20,8 +21,9 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
+        android:layout_below="@+id/server_ip"
         android:onClick="startMouse"
         android:text="@string/connect" />
 
